[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/screens/login/loginscreen.gd" type="Script" id=1]
[ext_resource path="res://ui/font-bold.tres" type="DynamicFont" id=2]
[ext_resource path="res://ui/elements/options/passwordoption.tscn" type="PackedScene" id=3]

[node name="LoginScreen" type="CenterContainer"]
margin_right = 1480.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 425.0
margin_top = 262.0
margin_right = 1055.0
margin_bottom = 458.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LeftMarginContainer" type="MarginContainer" parent="HBoxContainer"]
margin_right = 257.0
margin_bottom = 196.0
custom_constants/margin_top = 20
custom_constants/margin_bottom = 20

[node name="LeftVBoxContainer" type="VBoxContainer" parent="HBoxContainer/LeftMarginContainer"]
margin_top = 20.0
margin_right = 257.0
margin_bottom = 176.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Login" type="Label" parent="HBoxContainer/LeftMarginContainer/LeftVBoxContainer"]
margin_right = 257.0
margin_bottom = 19.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = ExtResource( 2 )
text = "Login"

[node name="Welcome" type="Label" parent="HBoxContainer/LeftMarginContainer/LeftVBoxContainer"]
margin_top = 23.0
margin_right = 257.0
margin_bottom = 156.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "
Since this is the first time you are
running the overlay, please set a 
password which will be used to store
tokens and passwords for accessing 
3rd party services.

This file will be encrypted using AES256."
align = 3

[node name="Back" type="Label" parent="HBoxContainer/LeftMarginContainer/LeftVBoxContainer"]
visible = false
margin_top = 178.0
margin_right = 263.0
margin_bottom = 311.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "
Welcome back!

Enter your master password to continue!

Since the file that stores your passwords 
is encrypted, it can not be read without 
the correct password."
align = 3

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
margin_left = 261.0
margin_right = 321.0
margin_bottom = 196.0
custom_constants/separation = 60

[node name="RightMarginContainer" type="MarginContainer" parent="HBoxContainer"]
margin_left = 325.0
margin_right = 630.0
margin_bottom = 196.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_top = 20
custom_constants/margin_bottom = 20

[node name="RightVBoxContainer" type="VBoxContainer" parent="HBoxContainer/RightMarginContainer"]
margin_top = 20.0
margin_right = 305.0
margin_bottom = 176.0
rect_min_size = Vector2( 305, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PasswordOption" parent="HBoxContainer/RightMarginContainer/RightVBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 305.0
margin_bottom = 44.0
option_name = "password"
label = "Password:"

[node name="RepeatPasswordOption" parent="HBoxContainer/RightMarginContainer/RightVBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 48.0
margin_right = 305.0
margin_bottom = 92.0
option_name = "password_repeat"
label = "Repeat password:"

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/RightMarginContainer/RightVBoxContainer"]
margin_left = 71.0
margin_top = 126.0
margin_right = 305.0
margin_bottom = 156.0
size_flags_horizontal = 8
size_flags_vertical = 10

[node name="ForgotPasswordButton" type="Button" parent="HBoxContainer/RightMarginContainer/RightVBoxContainer/HBoxContainer"]
margin_right = 160.0
margin_bottom = 30.0
rect_min_size = Vector2( 160, 30 )
size_flags_horizontal = 8
size_flags_vertical = 10
text = "Forgot password?"

[node name="LoginButton" type="Button" parent="HBoxContainer/RightMarginContainer/RightVBoxContainer/HBoxContainer"]
margin_left = 164.0
margin_right = 234.0
margin_bottom = 30.0
rect_min_size = Vector2( 70, 30 )
size_flags_horizontal = 8
size_flags_vertical = 10
text = "Login"
[connection signal="pressed" from="HBoxContainer/RightMarginContainer/RightVBoxContainer/HBoxContainer/ForgotPasswordButton" to="." method="_on_ForgotPasswordButton_pressed"]
[connection signal="pressed" from="HBoxContainer/RightMarginContainer/RightVBoxContainer/HBoxContainer/LoginButton" to="." method="_on_LoginButton_pressed"]
